--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-# Hello World
+<head>
+  <title>Hello World</title>
+</head>
 
-Check out my [Twitter](https://twitter.com/s_e_ogier)
+<body>
+  Check out my <a href = "https://twitter.com/s_e_ogier">Twitter</a>
+</body>
+
+</html>
